<resources>
    <string name="app_name">WS Inventory</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prorecevingList">Order List Without PRO</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email no_of_pallets is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_back_up_database">BackUpDatabase</string>
    <string name="hello_world">Hello world!</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="title_activity_dashboard_smith_job">DashboardSmithJob</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_dashboard_smith_job_order">Smith Job Order</string>
    <string name="title_activity_profile_detail">ProfileDetailActivity</string>
    <string name="title_activity_gold_price">GoldPriceActivity</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="All_group">All Group</string>
    <string name="title_activity_proreceiving_list">ProreceivingListActivity</string>
    <string name="title_activity_prodcut_receiving_investory">ProdcutReceivingInvestoryActivity
    </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_receving_inventory">Prod Receiving</string>
    <string name="title_activity_receive_product">Receive product</string>
    <string name="title_activity_add_receiveing_form">Add Receiving Form</string>
    <string name="title_activity_add_receiving_form">Add Receiving Form</string>
    <string name="title_activity_add_new_product">Add New Product</string>
    <string name="title_activity_inventory_counters">Inventory Counters</string>
    <string name="title_activity_inventory_trays">Inventory Trays</string>
    <string name="title_activity_conform_bin">Counter Confirmation</string>
    <string name="title_activity_confirm_pallet">ConfirmPallet</string>
    <string name="connect_reader">Connect Reader</string>
</resources>
